labs/03/y.output
   0  $accept : SENTENCE $end

   1  SENTENCE : NOUN_PHRASE VERB_PHRASE
   2           | error

   3  NOUN_PHRASE : CMPLX_NOUN
   4              | CMPLX_NOUN PREP_PHRASE

   5  VERB_PHRASE : CMPLX_VERB
   6              | CMPLX_VERB PREP_PHRASE

   7  CMPLX_NOUN : ARTICLE NOUN

   8  CMPLX_VERB : VERB
   9             | VERB NOUN_PHRASE

  10  PREP_PHRASE : PREP CMPLX_NOUN

state 0
	$accept : . SENTENCE $end  (0)

	error  shift 1
	ARTICLE  shift 2
	.  error

	SENTENCE  goto 3
	NOUN_PHRASE  goto 4
	CMPLX_NOUN  goto 5


state 1
	SENTENCE : error .  (2)

	.  reduce 2


state 2
	CMPLX_NOUN : ARTICLE . NOUN  (7)

	NOUN  shift 6
	.  error


state 3
	$accept : SENTENCE . $end  (0)

	$end  accept


state 4
	SENTENCE : NOUN_PHRASE . VERB_PHRASE  (1)

	VERB  shift 7
	.  error

	VERB_PHRASE  goto 8
	CMPLX_VERB  goto 9


5: shift/reduce conflict (shift 10, reduce 3) on PREP
state 5
	NOUN_PHRASE : CMPLX_NOUN .  (3)
	NOUN_PHRASE : CMPLX_NOUN . PREP_PHRASE  (4)

	PREP  shift 10
	$end  reduce 3
	VERB  reduce 3

	PREP_PHRASE  goto 11


state 6
	CMPLX_NOUN : ARTICLE NOUN .  (7)

	.  reduce 7


state 7
	CMPLX_VERB : VERB .  (8)
	CMPLX_VERB : VERB . NOUN_PHRASE  (9)

	ARTICLE  shift 2
	$end  reduce 8
	PREP  reduce 8

	NOUN_PHRASE  goto 12
	CMPLX_NOUN  goto 5


state 8
	SENTENCE : NOUN_PHRASE VERB_PHRASE .  (1)

	.  reduce 1


state 9
	VERB_PHRASE : CMPLX_VERB .  (5)
	VERB_PHRASE : CMPLX_VERB . PREP_PHRASE  (6)

	PREP  shift 10
	$end  reduce 5

	PREP_PHRASE  goto 13


state 10
	PREP_PHRASE : PREP . CMPLX_NOUN  (10)

	ARTICLE  shift 2
	.  error

	CMPLX_NOUN  goto 14


state 11
	NOUN_PHRASE : CMPLX_NOUN PREP_PHRASE .  (4)

	.  reduce 4


state 12
	CMPLX_VERB : VERB NOUN_PHRASE .  (9)

	.  reduce 9


state 13
	VERB_PHRASE : CMPLX_VERB PREP_PHRASE .  (6)

	.  reduce 6


state 14
	PREP_PHRASE : PREP CMPLX_NOUN .  (10)

	.  reduce 10


State 5 contains 1 shift/reduce conflict.


6 terminals, 7 nonterminals
11 grammar rules, 15 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  NOUN
     3    258  ARTICLE
     4    259  VERB
     5    260  PREP
     6    261  $accept
     7    262  SENTENCE
     8    263  NOUN_PHRASE
     9    264  VERB_PHRASE
    10    265  CMPLX_NOUN
    11    266  PREP_PHRASE
    12    267  CMPLX_VERB
